--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!-- Scripts-->
 <script src="https://unpkg.co/gsap@3/dist/gsap.min.js" defer></script>
-<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js" defer"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js" defer></script>
 <script src="script.js" defer></script>
 
 <section class="panel">
